Fix bugs on lang
