# service/resources/languages/languages.py
@@ -1,10 +1,19 @@
 from flask import abort
-from flask_restful import Resource
+from flask_restful import (Resource, reqparse,
+                           fields, marshal_with)
 from service.utils.languages import getLanguages
 
+lang_args = reqparse.RequestParser()
+lang_args.add_argument('lang_code', type=str, help="Please provide a language code")
+
+languageFields = {
+    'lang_code': fields.String,
+    'lang_label': fields.String
+}
 
 
 class LanguagesGet(Resource):
+    @marshal_with(languageFields)
     def map_languages(self, data):
         lang_data = []
         for lang in data:
@@ -21,11 +30,14 @@ class LanguagesGet(Resource):
 
 
 class LanguageGet(Resource):
-    def get(self, lang_code):
-        lang_pair = [entry for entry in getLanguages() if entry[0] == lang_code]
-        if not lang_pair: 
+    @marshal_with(languageFields)
+    def post(self, lang_code):
+        args = lang_args.parse_args()
+
+        if not args['lang_code']: 
             abort(400, "Language not supported")
+        lang_pair = [(code, lab) for (code, lab) in getLanguages() if code ==  args['lang_code']][0]
         return {
-            'lang_code': lang_pair[0],
-            'lang_label': lang_pair[1]
+            'lang_code': list(lang_pair)[0],
+            'lang_label': list(lang_pair)[1]
         }, 200
